# displayconfig-mutter

./: Cargo.toml  LICENSE  README.md  flake.nix
.copr/: Makefile
.github/workflows/: release.yaml
arch/: PKGBUILD
debian/: changelog  control  rules
fedora/: displayconfig-mutter.spec
src/: cli.rs  display_config.rs  lib.rs  main.rs
