[package]
name = "displayconfig-mutter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
comfy-table = "7.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.44.2", features = ["full"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }
