[package]
name = "displayconfig-mutter"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "1.44", features = ["full"] }
zbus = { version = "5.5", default-features = false, features = ["tokio"] }
