[package]
name = "displayconfig-mutter"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "1.39", features = ["full"] }
zbus = { version = "4.3", default-features = false, features = ["tokio"] }
tabled = ">= 0.14, < 1"
